bpk-lib/crates/macbat/macros/tests/trybuild_negative/operation_duplicate_key.stderr
error: duplicate `name` key
 --> tests/trybuild_negative/operation_duplicate_key.rs:5:5
  |
5 |     name = "b",
  |     ^^^^
